# Style-Bert-VITS2

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.api.dockerignore  Dockerfile.deploy  ENVIRONMENT.md  Makefile  README.md  TranscribeAnime.bat  app.py  audio_processing_guide.md  audio_separater.py  compose.api.yml  config.py  convert_onnx.py  default_config.yml  docker-compose-gpu.yml  docker-compose.yml  download_anime_whisper.py  download_models.sh  entrypoint_jobs.sh  gradio_client_patch.py  index.html  model_config.json  pyproject.toml  requirements-colab.txt  requirements-infer.txt  requirements.txt  run.sh  run_gpu.sh  server_fastapi.py  setup-env-uv.bat  setup-env.bat  setup-env.sh  setup.ps1  slice.py  train_ms.py  train_ms_jp_extra.py  transcribe.py  transcribe_anime.py  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json
configs/: config.json  config_jp_extra.json
dict_data/: test-lists-eigo-and-yomimatigai.txt
docs/: NOTICE.md  TERMS_OF_USE.md
docs/adr/: ADR-001-selectable-schedule-free-optimizers.md
gradio_tabs/: dataset.py  merge.py
onnx/: content.txt  convet_tokenizer.py  debert-export.py  export-onnx.py  lol.py  npy2json.py  predict.py  style_vectors.json  tes.py  test.py
onnx/tokenizer/: tokenizer_config.json
style_bert_vits2/: tts_model.py
style_bert_vits2/models/: infer.py  models.py  models_jp_extra.py
style_bert_vits2/models/utils/: checkpoints.py
style_bert_vits2/nlp/japanese/: g2p.py
style_bert_vits2/nlp/japanese/pyopenjtalk_worker/: __init__.py
style_bert_vits2/nlp/japanese/user_dict/: word_model.py
