[tool.poetry]
name = "style-bert-vits2"
version = "0.1.0"
description = ""
authors = ["WATANABE Shin <sin9270@gmail.com>"]
readme = "README.md"
packages = [{include = "style_bert_vits2"}]

[tool.poetry.dependencies]
python = "^3.10"
gputil = "^1.4.0"
loguru = "^0.7.2"
psutil = "^5.9.8"
pydantic = "^2.6.4"
pyyaml = "^6.0.1"
scipy = "^1.13.0"
torch = ">=2.1,<2.2"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
cmudict = "^1.0.23"
cn2an = "^0.5.22"
faster-whisper = "0.10.1"
g2p-en = "^2.1.0"
gradio = "^4.25.0"
jieba = "^0.42.1"
langid = "^1.1.6"
librosa = "0.9.2"
matplotlib = "^3.8.4"
num2words = "^0.5.13"
numba = "^0.59.1"
numpy = "^1.26.4"
pyannote-audio = ">=3.1.0"
pyloudnorm = "^0.1.1"
pyopenjtalk-dict = "^0.3.4.dev2"
pypinyin = "^0.51.0"
requests = "^2.31.0"
safetensors = "^0.4.2"
tensorboard = "^2.16.2"
transformers = "^4.39.3"
umap-learn = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
